feat: create getlist
