# docs/swagger.json
@@ -18,6 +18,42 @@
     "basePath": "/",
     "paths": {
         "/auctions": {
+            "get": {
+                "description": "Retrieves a list of all auctions",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auctions"
+                ],
+                "summary": "Get list of auctions",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Auction"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new auction in the system",
                 "consumes": [
@@ -75,9 +111,6 @@
                     }
                 },
                 "endTime": {
-                    "type": "string"
-                },
-                "id": {
                     "type": "string"
                 },
                 "itemId": {
